fixing some service icon alignment

--- a/src/less/homepage.less
+++ b/src/less/homepage.less
@@ -67,13 +67,9 @@
     }
 }
 
-.homepage-services-format {
-    display: inline-block;
-}
-
 .homepage-service {
     float: left;
-    width: 141px;
+    width: 16.667%;
     &:nth-child(1) {
         .homepage-service-icon-wrapper {
             background-color: #d2cbd8;
@@ -130,7 +126,7 @@
     }
     .homepage-service-detail {
         font-size: 16px;
-        font-weight: 600;
+        font-weight: 500;
         letter-spacing: -0.1px;
         color: #2a6292;
         margin-top: 26px;
